--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "sass": "^1.54.0",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
-        "vue": "^3.2.31"
+        "vue": "^3.2.31",
+        "pinia": "^2.0.17"
     }
 }
